--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -13,8 +13,8 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/shuangqiao999/openwrt
+  REPO_BRANCH: 24.1
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86_64_mini.config
   DIY_P1_SH: diy-part1.sh
