--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,18 +1,145 @@
-# Target Config
+### 核心架构配置 ###
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_CLANG_VERSION="16.0.6"
+CONFIG_LLVM_TARGET_ARCH="x86"
 
+### 极致编译优化 ###
+CONFIG_USE_LTO=y
+CONFIG_USE_MOLD=y
+CONFIG_CCACHE=y
+CONFIG_CPU_MITIGATIONS=n
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_KERNEL_CLANG_LLVM=y       # Clang编译内核
+CONFIG_USE_LLD=y                 # LLD链接器
+CONFIG_LTO_CLANG_THIN=y          # ThinLTO优化
+CONFIG_LLVM_POLLY=y              # 多面体优化
 
-# Firmware Type
-CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_ROOTFS_PARTSIZE=944
-CONFIG_GRUB_IMAGES=y
-CONFIG_GRUB_EFI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_ROOTFS_TARGZ=y
+### J4125专属调度优化 ###
+CONFIG_SCHED_BMQ=y
+CONFIG_SCHED_MC_PRIO=y
+CONFIG_PREEMPT_RT=y              # 实时内核补丁
+CONFIG_PREEMPT_VOLUNTARY=n
+CONFIG_HZ=1000
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_SCHED_CORE=y
+CONFIG_SCHED_MC=y
+CONFIG_PREEMPT_DYNAMIC=y         # 动态抢占等级
+CONFIG_SCHED_HRTICK=y            # 高精度任务计时
 
+### 内存优化 (8GB专用) ###
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
+CONFIG_LRU_GEN_WALKS_MMU=y
+CONFIG_COMPACTION=y
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_COMPRESSOR=lz4
+CONFIG_ZSWAP_ZPOOL=zsmalloc
+CONFIG_PAGE_POISONING=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_DAMON=y                   # 主动内存优化
+CONFIG_DAMON_VADDR=y
+CONFIG_DAMON_PADDR=y
+CONFIG_IDLE_PAGE_TRACKING=y      # 页面冷热追踪
+
+### 网络协议栈加速 ###
+CONFIG_TCP_MD5SIG=y
+CONFIG_TCP_AO=y
+CONFIG_TCP_NO_TSQ=y
+CONFIG_NET_FLOW_LIMIT=y
+CONFIG_PACKAGE_kmod-tcp-bbr3=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_ZERO_COPY_RECEIVE=y   # 零拷贝接收
+CONFIG_NET_EGRESS=y              # eBPF出口控制
+CONFIG_NET_XGRESS=y              # XDP转发加速
+
+CONFIG_IP_ROUTE_MULTIPATH=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=192
+CONFIG_IP_MULTIPLE_TABLES=y      # 策略路由
+
+### i226网卡极致优化 ###
+CONFIG_IGC=y
+CONFIG_IGC_DCA=y
+CONFIG_IGC_HWMON=y
+CONFIG_XPS=y
+CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_IGC_LRO=y
+CONFIG_IGC_FPGA=y
+CONFIG_NET_SELFTESTS=y
+CONFIG_IGC_XDP=y                 # XDP支持
+CONFIG_IGC_TAPRIO=y              # 时间感知调度
+CONFIG_IGC_DEBUG=y               # XDP调试
+CONFIG_NET_XDP=y                 # 核心XDP支持
+
+### XDP核心配置 ###
+CONFIG_XDP_SOCKETS=y             # XDP sockets
+CONFIG_XDP_UMEM=y
+CONFIG_XSK_DIAG=y
+CONFIG_BPF=y
+CONFIG_BPF_SYSCALL=y
+CONFIG_BPF_JIT=y
+CONFIG_BPF_JIT_ALWAYS_ON=y       # 禁用解释器
+CONFIG_DEBUG_INFO_BTF=y          # BPF类型信息
+
+### 中断优化 ###
+CONFIG_IRQ_FORCED_THREADING=y
+CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_IRQ_PIPELINE=y            # 中断流水线
+CONFIG_HAVE_IRQ_PIPELINE=y
+CONFIG_IRQ_FASTEOI_HIER=y        # 分层EOI
+
+### 电源与CPU调控 ###
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_X86_INTEL_PSTATE=y
+CONFIG_ACPI_CPPC_CPUFREQ=y
+CONFIG_INTEL_IDLE=n
+CONFIG_INTEL_TCC=y
+CONFIG_CPU_FREQ_THERMAL=n
+CONFIG_INTEL_PSTATE_HWP=y        # 硬件P-state
+CONFIG_INTEL_EPB=y               # 能效偏好
+CONFIG_ACPI_CPPC_LIB=y           # CPPC增强
+
+### 文件系统加速 ###
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_PACKAGE_kmod-fuse-overlayfs=y
+CONFIG_BCACHEFS=y                # 高性能文件系统
+CONFIG_FS_VERITY=y               # 文件完整性
+
+### 安全增强 ###
+CONFIG_STRICT_KERNEL_RWX=y
+CONFIG_HARDENED_USERCOPY=y
+CONFIG_GCC_PLUGIN_STACKLEAK=y
+CONFIG_RANDOMIZE_KSTACK_OFFSET_DEFAULT=y
+CONFIG_RANDOM_TRUST_CPU=y        # 信任Intel RDRAND
+CONFIG_INIT_STACK_ALL_ZERO=y     # 栈初始化保护
+
+### 调试精简 ###
+CONFIG_DEBUG_INFO=n
+CONFIG_DEBUG_KERNEL=n
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_SLUB_DEBUG=n
+CONFIG_NET_DROP_MONITOR=y        # 网络丢包监控
+
+### 必备工具 ###
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_ethtool=y         # 网卡诊断工具
+CONFIG_PACKAGE_xdp-tools=y       # XDP实用程序
+CONFIG_PACKAGE_bpftool=y         # BPF管理工具
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -24,18 +151,18 @@ CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 
-
-# Software
-
-CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
-
-
-
-# Ipv6 Support
-CONFIG_PACKAGE_6in4=y
+### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
-CONFIG_PACKAGE_ip6tables-extra=y
-CONFIG_PACKAGE_ip6tables-mod-nat=y
+CONFIG_IPV6_ROUTER_PREF=y
+CONFIG_IPV6_ROUTE_INFO=y
+CONFIG_IPV6_MULTIPLE_TABLES=y
+
+### 固件设置 ###
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=944
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
