更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -6,14 +6,12 @@ CONFIG_CLANG_VERSION="16.0.6"
 CONFIG_LLVM_TARGET_ARCH="x86"
 
 ### 极致编译优化 ###
-CONFIG_USE_LTO=y
-CONFIG_USE_MOLD=y
-CONFIG_CCACHE=y
+
 CONFIG_CPU_MITIGATIONS=n
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_KERNEL_CLANG_LLVM=y       # Clang编译内核
 CONFIG_USE_LLD=y                 # LLD链接器
-CONFIG_LTO_CLANG_THIN=y          # ThinLTO优化
+
 CONFIG_LLVM_POLLY=y              # 多面体优化
 
 ### J4125专属调度优化 ###
@@ -88,6 +86,28 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y       # 禁用解释器
 CONFIG_DEBUG_INFO_BTF=y          # BPF类型信息
+# 网络调试支持
+CONFIG_PACKAGE_iproute2-tc=y      # Traffic Control 工具
+CONFIG_PACKAGE_ethtool-full=y     # 完整版网卡诊断
+
+# BPF 开发支持
+CONFIG_PACKAGE_bpftool-full=y     # 完整 BPF 工具
+CONFIG_PACKAGE_libbpf-extra=y     # 扩展 BPF 库
+
+# 内核级 XDP 增强
+CONFIG_KERNEL_LWTUNNEL_BPF=y      # BPF 轻量隧道
+CONFIG_KERNEL_BPF_EVENTS=y        # BPF 事件挂钩
+# XDP/BPF 基础库
+CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_libtirpc=y
+
+# 编译工具链
+CONFIG_PACKAGE_clang=y
+CONFIG_PACKAGE_llvm=y
+
+# 内核模块显式内置（非模块）
+CONFIG_PACKAGE_kmod-xdp-sockets-diag=y  # 改为 y 非 m
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
