更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -50,6 +50,7 @@ CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
 CONFIG_PACKAGE_kmod-tcp-bbr3=y
+CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y   # 零拷贝接收
 CONFIG_NET_EGRESS=y              # eBPF出口控制
