更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -84,6 +84,7 @@ CONFIG_NET_XDP=y                 # 核心XDP支持
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y             # XDP sockets
+CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_XDP_UMEM=y
 CONFIG_XSK_DIAG=y
 CONFIG_BPF=y
