--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -144,6 +144,12 @@ CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_PACKAGE_kmod-fuse-overlayfs=y
 CONFIG_BCACHEFS=y                # 高性能文件系统
 CONFIG_FS_VERITY=y               # 文件完整性
+CONFIG_PACKAGE_luci=y
+CONFIG_PACKAGE_luci-base=y
+CONFIG_PACKAGE_liblua=y
+CONFIG_PACKAGE_e2fsprogs=y       # 磁盘工具依赖
+CONFIG_PACKAGE_blkid=y           # 磁盘信息工具
+CONFIG_PACKAGE_lsblk=y           # 磁盘列表工具
 
 ### 安全增强 ###
 CONFIG_STRICT_KERNEL_RWX=y
