--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -164,6 +164,7 @@ CONFIG_PACKAGE_luci-app-diskman=y # 磁盘管理
 CONFIG_PACKAGE_luci-app-nlbwmon=y # 流量监控
 CONFIG_PACKAGE_luci-app-oaf=y     # 应用过滤
 CONFIG_PACKAGE_luci-app-ttyd=y    # 网页终端
+CONFIG_PACKAGE_luci-app-filemanager=y
 
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
