更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -50,6 +50,7 @@ CONFIG_NET_FLOW_LIMIT=y           # 流控支持
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_TCP_CONG_BBR=y             # BBRv3拥塞控制
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y    # 零拷贝接收(降CPU)
