更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -93,6 +93,13 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y        # 禁用解释器(纯JIT)
 CONFIG_DEBUG_INFO_BTF=y           # BPF类型信息
+CONFIG_KERNEL_BPF_EVENTS=y
+CONFIG_KERNEL_DEBUG_KERNEL=y
+CONFIG_KERNEL_DEBUG_INFO=y
+CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
+
+
 
 # === 工具链 ===
 CONFIG_PACKAGE_iproute2-tc=y      # Traffic Control工具
