更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -116,7 +116,10 @@ CONFIG_PACKAGE_llvm=y
 CONFIG_KERNEL_LWTUNNEL_BPF=y      # BPF轻量隧道
 CONFIG_KERNEL_BPF_EVENTS=y        # BPF事件挂钩
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y  # XDP诊断(内置)
-
+CONFIG_BPF_EVENTS=y
+CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO_REDUCED=n
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y     # 强制中断线程化
 CONFIG_GENERIC_IRQ_IPI=y
