--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -99,7 +99,19 @@ CONFIG_KERNEL_DEBUG_INFO=y
 CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
 CONFIG_KERNEL_DEBUG_INFO_BTF=y
 
-
+CONFIG_KERNEL_BPF_STREAM_PARSER=y # dae
+CONFIG_KERNEL_CGROUPS=y # dae
+CONFIG_KERNEL_KALLSYMS=y
+CONFIG_KERNEL_KPROBES=y # dae
+CONFIG_KERNEL_KPROBE_EVENTS=y # dae
+CONFIG_NET_INGRESS=y # dae
+CONFIG_NET_EGRESS=y # dae
+CONFIG_NET_CLS_ACT=y # dae
+CONFIG_NET_CLS_BPF=y # einet-ebpf,dae
+CONFIG_NET_ACT_BPF=y # einet-ebpf
+CONFIG_NET_SCH_INGRESS=y # dae
+CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
+CONFIG_KERNEL_NETKIT=y # immortalwrt
 
 # === 工具链 ===
 CONFIG_PACKAGE_iproute2-tc=y      # Traffic Control工具
