--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -43,9 +43,17 @@ jobs:
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
+        
+        # 创建并启用8GB swap空间
+        sudo dd if=/dev/zero of=/swapfile bs=1M count=8192
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
+        echo "Swap status after creation:"
+        free -h
+        
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
-   
 
     - name: Clone source code
       working-directory: /workdir
@@ -94,6 +102,16 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+
+    # 添加swap清理步骤
+    - name: Clean up swap
+      if: always()
+      run: |
+        echo "Cleaning up swap space..."
+        sudo swapoff /swapfile
+        sudo rm -f /swapfile
+        echo "Swap status after cleanup:"
+        free -h
 
     - name: Check space usage
       if: (!cancelled())
