--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -165,6 +165,8 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_einat-ebpf=y
 CONFIG_PACKAGE_luci-app-einat=y
+CONFIG_PACKAGE_luci-app-oaf=y
+
 
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
