--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -166,7 +166,8 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_einat-ebpf=y
 CONFIG_PACKAGE_luci-app-einat=y
 CONFIG_PACKAGE_luci-app-oaf=y
-
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
 
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
