--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -91,6 +91,7 @@ CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
 CONFIG_DEBUG_INFO_BTF=y
+CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
