--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -3,192 +3,176 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-
-### 极致编译优化 ###
-CONFIG_CPU_MITIGATIONS=n          # 关闭安全缓解提升性能
+### 编译优化 ###
+CONFIG_CPU_MITIGATIONS=n
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_KERNEL_CLANG_LLVM=y        # Clang编译内核
-CONFIG_USE_LLD=y                  # LLD链接器加速链接过程
-CONFIG_LLVM_POLLY=y               # 多面体优化(循环优化)
+CONFIG_KERNEL_CLANG_LLVM=y
+CONFIG_USE_LLD=y
+CONFIG_LLVM_POLLY=y
 
-### J4125专属调度优化 ###
-CONFIG_SCHED_BMQ=y                # BitMap队列调度器(低延迟)
-CONFIG_SCHED_MC_PRIO=y            # 多核优先级感知
-CONFIG_PREEMPT_RT=y               # 实时内核补丁(关键低延迟)
+### CPU调度优化 ###
+# J4125专属调度
+CONFIG_SCHED_BMQ=y
+CONFIG_SCHED_MC_PRIO=y
+CONFIG_PREEMPT_RT=y
 CONFIG_PREEMPT_VOLUNTARY=n
-CONFIG_HZ=1000                    # 1kHz时钟精度
-CONFIG_NO_HZ_FULL=y               # 无滴答全动态模式
-CONFIG_NO_HZ_FULL_ALL=y           # 所有核启用无滴答
-CONFIG_HIGH_RES_TIMERS=y          # 高精度定时器
-CONFIG_SCHED_CORE=y               # 核心调度支持
-CONFIG_SCHED_MC=y                 # 多核负载均衡
-CONFIG_PREEMPT_DYNAMIC=y          # 动态抢占等级调整
-CONFIG_SCHED_HRTICK=y             # 纳秒级任务计时
+CONFIG_HZ=1000
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_HIGH_RES_TIMERS=y
+CONFIG_SCHED_CORE=y
+CONFIG_SCHED_MC=y
+CONFIG_PREEMPT_DYNAMIC=y
+CONFIG_SCHED_HRTICK=y
 
-### 内存优化 (8GB专用) ###
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y  # 强制使用2MB大页
-CONFIG_LRU_GEN=y                  # 新一代LRU算法
+### 内存管理优化 ###
+# 8GB专用配置
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
+CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
 CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_COMPACTION=y               # 内存压缩支持
-CONFIG_ZSWAP=y                    # 压缩交换缓存
-CONFIG_ZSWAP_COMPRESSOR=lz4       # 低延迟压缩算法
+CONFIG_COMPACTION=y
+CONFIG_ZSWAP=y
+CONFIG_ZSWAP_COMPRESSOR=lz4
 CONFIG_ZSWAP_ZPOOL=zsmalloc
-CONFIG_PAGE_POISONING=y           # 内存安全检测
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y # 安全初始化
-CONFIG_DAMON=y                    # 主动内存优化守护进程
+CONFIG_PAGE_POISONING=y
+CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
+CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
-CONFIG_IDLE_PAGE_TRACKING=y       # 页面冷热追踪
+CONFIG_IDLE_PAGE_TRACKING=y
 
 ### 网络协议栈加速 ###
-# === 核心加速 ===
+# TCP/IP核心优化
 CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_AO=y                   # TCP认证选项
-CONFIG_TCP_NO_TSQ=y               # 每CPU TCP小队列
-CONFIG_NET_FLOW_LIMIT=y           # 流控支持
+CONFIG_TCP_AO=y
+CONFIG_TCP_NO_TSQ=y
+CONFIG_NET_FLOW_LIMIT=y
+CONFIG_TCP_CONG_BBR=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_TCP_CONG_BBR=y             # BBRv3拥塞控制
 CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_ZERO_COPY_RECEIVE=y    # 零拷贝接收(降CPU)
-CONFIG_NET_EGRESS=y               # eBPF出口控制
-CONFIG_NET_XGRESS=y               # XDP转发加速
+CONFIG_TCP_ZERO_COPY_RECEIVE=y
+CONFIG_NET_EGRESS=y
+CONFIG_NET_XGRESS=y
 
-# === 路由优化 ===
-CONFIG_IP_ROUTE_MULTIPATH=y       # 多路径路由
+# 路由优化
+CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_NET_RX_BUSY_POLL=y         # 收包忙轮询
-CONFIG_NET_RX_BUSY_POLL_BUDGET=192 # 轮询预算(适配J4125)
-CONFIG_IP_MULTIPLE_TABLES=y       # 策略路由支持
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=192
+CONFIG_IP_MULTIPLE_TABLES=y
 
-### i226网卡极致优化 ###
-# === 驱动核心 ===
-CONFIG_IGC=y                      # i226驱动
-CONFIG_IGC_DCA=y                  # 直接缓存访问
-CONFIG_IGC_HWMON=y                # 硬件监控
+### 网卡驱动优化 ###
+# i226网卡专属配置
+CONFIG_IGC=y
+CONFIG_IGC_DCA=y
+CONFIG_IGC_HWMON=y
+CONFIG_XPS=y
+CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_IGC_LRO=y
+CONFIG_IGC_FPGA=y
+CONFIG_IGC_XDP=y
+CONFIG_IGC_TAPRIO=y
 
-# === 队列优化 ===
-CONFIG_XPS=y                      # 传输包转向
-CONFIG_XPS_DEFAULT_QUEUES=4       # 4队列(匹配4核心)
-CONFIG_RPS=y                      # 接收包转向
-CONFIG_RFS_ACCEL=y                # 流导向加速
-
-# === 硬件特性 ===
-CONFIG_IGC_LRO=y                  # 大接收卸载
-CONFIG_IGC_FPGA=y                 # FPGA优化支持
-CONFIG_IGC_XDP=y                  # XDP原生支持
-CONFIG_IGC_TAPRIO=y               # 时间感知调度(QoS)
-
-### XDP核心配置 ###
-# === 基础支持 ===
-CONFIG_XDP_SOCKETS=y              # XDP sockets
+### XDP加速体系 ###
+# XDP核心支持
+CONFIG_XDP_SOCKETS=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_XDP_UMEM=y
 CONFIG_XSK_DIAG=y
+
+# BPF子系统
 CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y        # 禁用解释器(纯JIT)
-CONFIG_DEBUG_INFO_BTF=y           # BPF类型信息
+CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_KERNEL_DEBUG_KERNEL=y
-CONFIG_KERNEL_DEBUG_INFO=y
-CONFIG_KERNEL_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_DEBUG_INFO_BTF=y
-
-CONFIG_KERNEL_BPF_STREAM_PARSER=y # dae
-CONFIG_KERNEL_CGROUPS=y # dae
+CONFIG_KERNEL_LWTUNNEL_BPF=y
+CONFIG_KERNEL_BPF_STREAM_PARSER=y
+CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
-CONFIG_KERNEL_KPROBES=y # dae
-CONFIG_KERNEL_KPROBE_EVENTS=y # dae
-CONFIG_NET_INGRESS=y # dae
-CONFIG_NET_EGRESS=y # dae
-CONFIG_NET_CLS_ACT=y # dae
-CONFIG_NET_CLS_BPF=y # einet-ebpf,dae
-CONFIG_NET_ACT_BPF=y # einet-ebpf
-CONFIG_NET_SCH_INGRESS=y # dae
+CONFIG_KERNEL_KPROBES=y
+CONFIG_KERNEL_KPROBE_EVENTS=y
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_CLS_BPF=y
+CONFIG_NET_ACT_BPF=y
+CONFIG_NET_SCH_INGRESS=y
 CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
-CONFIG_KERNEL_NETKIT=y # immortalwrt
+CONFIG_KERNEL_NETKIT=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 
-# === 工具链 ===
-CONFIG_PACKAGE_iproute2-tc=y      # Traffic Control工具
-CONFIG_PACKAGE_ethtool-full=y     # 完整版网卡诊断
-CONFIG_PACKAGE_bpftool-full=y     # 完整BPF工具
-CONFIG_PACKAGE_libbpf-extra=y     # 扩展BPF库
+# XDP工具链
+CONFIG_PACKAGE_bpftool-full=y
+CONFIG_PACKAGE_libbpf-extra=y
 CONFIG_PACKAGE_libbpf=y
 CONFIG_PACKAGE_libxdp=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
+CONFIG_PACKAGE_xdp-tools=y
 
-# === 内核增强 ===
-CONFIG_KERNEL_LWTUNNEL_BPF=y      # BPF轻量隧道
-CONFIG_KERNEL_BPF_EVENTS=y        # BPF事件挂钩
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y  # XDP诊断(内置)
-CONFIG_BPF_EVENTS=y
+### 中断系统优化 ###
+CONFIG_IRQ_FORCED_THREADING=y
+CONFIG_GENERIC_IRQ_IPI=y
+CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_IRQ_PIPELINE=y
+CONFIG_HAVE_IRQ_PIPELINE=y
+CONFIG_IRQ_FASTEOI_HIER=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
+
+### CPU电源管理 ###
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
+CONFIG_X86_INTEL_PSTATE=y
+CONFIG_ACPI_CPPC_CPUFREQ=y
+CONFIG_INTEL_IDLE=n
+CONFIG_INTEL_TCC=y
+CONFIG_INTEL_PSTATE_HWP=y
+CONFIG_INTEL_EPB=y
+CONFIG_ACPI_CPPC_LIB=y
+
+### 文件系统优化 ###
+CONFIG_SQUASHFS_XZ=y
+CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
+CONFIG_PACKAGE_kmod-fs-ntfs3=y
+CONFIG_BCACHEFS=y
+CONFIG_FS_VERITY=y
+
+### 安全加固 ###
+CONFIG_STRICT_KERNEL_RWX=y
+CONFIG_HARDENED_USERCOPY=y
+CONFIG_RANDOM_TRUST_CPU=y
+CONFIG_INIT_STACK_ALL_ZERO=y
+CONFIG_PACKAGE_openssl-util=y
+
+### 诊断监控 ###
 CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_REDUCED=n
-### 中断优化 ###
-CONFIG_IRQ_FORCED_THREADING=y     # 强制中断线程化
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_PACKAGE_irqbalance=y       # 中断负载均衡
-CONFIG_PACKAGE_luci-app-irqbalance=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_IRQ_PIPELINE=y             # 中断流水线(降延迟)
-CONFIG_HAVE_IRQ_PIPELINE=y
-CONFIG_IRQ_FASTEOI_HIER=y         # 分层EOI处理
-
-### 电源与CPU调控 ###
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y  # 性能优先
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_X86_INTEL_PSTATE=y         # Intel P-state驱动
-CONFIG_ACPI_CPPC_CPUFREQ=y        # CPPC调频
-CONFIG_INTEL_IDLE=n               # 禁用C-state(降延迟)
-CONFIG_INTEL_TCC=y                # 温度控制支持
-CONFIG_INTEL_PSTATE_HWP=y         # 硬件P-state控制
-CONFIG_INTEL_EPB=y                # 能效偏好调整
-CONFIG_ACPI_CPPC_LIB=y            # CPPC增强
-
-### 文件系统加速 ###
-CONFIG_SQUASHFS_XZ=y              # XZ压缩支持
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y  # 多核解压
-CONFIG_PACKAGE_kmod-fs-ntfs3=y    # NTFS驱动
-CONFIG_BCACHEFS=y                 # 高性能文件系统
-CONFIG_FS_VERITY=y                # 文件完整性校验
-
-### 安全增强 ###
-CONFIG_STRICT_KERNEL_RWX=y        # 内核代码保护
-CONFIG_HARDENED_USERCOPY=y        # 用户拷贝保护
-CONFIG_RANDOM_TRUST_CPU=y         # 信任Intel RDRAND
-CONFIG_INIT_STACK_ALL_ZERO=y      # 栈初始化保护
-CONFIG_PACKAGE_openssl-util=y     # 加密工具
-
-### 调试精简 ###
-
-CONFIG_PANIC_ON_OOPS=y            # 崩溃快速响应
-
-CONFIG_NET_DROP_MONITOR=y         # 网络丢包监控
-
-### 必备工具 ###
-CONFIG_PACKAGE_htop=y             # 进程监控
-CONFIG_PACKAGE_iperf3=y           # 网络测试
-CONFIG_PACKAGE_ethtool=y          # 网卡诊断
-CONFIG_PACKAGE_xdp-tools=y        # XDP实用工具
-CONFIG_PACKAGE_bpftool=y          # BPF管理
+CONFIG_PANIC_ON_OOPS=y
+CONFIG_NET_DROP_MONITOR=y
+CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_ethtool-full=y
+CONFIG_PACKAGE_iproute2-tc=y
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
-CONFIG_PACKAGE_luci-app-diskman=y # 磁盘管理
-CONFIG_PACKAGE_luci-app-nlbwmon=y # 流量监控
-CONFIG_PACKAGE_luci-app-oaf=y     # 应用过滤
-CONFIG_PACKAGE_luci-app-ttyd=y    # 网页终端
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-nlbwmon=y
+CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 CONFIG_PACKAGE_einat-ebpf=y
 CONFIG_PACKAGE_luci-app-einat=y
+
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_PACKAGE_ip6tables=y
@@ -196,11 +180,11 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 
-### 固件设置 ###
-CONFIG_TARGET_KERNEL_PARTSIZE=32  # 内核分区32MB
-CONFIG_TARGET_ROOTFS_PARTSIZE=944 # 根分区944MB
-CONFIG_GRUB_IMAGES=y              # BIOS引导支持
-CONFIG_GRUB_EFI_IMAGES=y          # UEFI引导支持
-CONFIG_TARGET_IMAGES_GZIP=y       # 固件压缩
-CONFIG_TARGET_ROOTFS_SQUASHFS=y   # 只读根文件系统
-CONFIG_TARGET_ROOTFS_TARGZ=y      # 备份文件系统
+### 固件结构配置 ###
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=944
+CONFIG_GRUB_IMAGES=y
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_ROOTFS_TARGZ=y
