更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -108,13 +108,13 @@ CONFIG_PACKAGE_kmod-sched-bpf=y
 
 # XDP工具链
 CONFIG_PACKAGE_bpftool-full=y
-CONFIG_PACKAGE_libbpf-extra=y
 CONFIG_PACKAGE_libbpf=y
+CONFIG_PACKAGE_libbpf-extra=y
 CONFIG_PACKAGE_libxdp=y
+CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
-CONFIG_PACKAGE_xdp-tools=y
 
 ### 中断系统优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -154,6 +154,7 @@ CONFIG_PACKAGE_openssl-util=y
 ### 诊断监控 ###
 CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_INFO=y
+CONFIG_DEBUG_INFO_BTF=y
 CONFIG_DEBUG_INFO_REDUCED=n
 CONFIG_PANIC_ON_OOPS=y
 CONFIG_NET_DROP_MONITOR=y
