--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -103,6 +103,10 @@ CONFIG_NET_SCH_INGRESS=y
 CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
 CONFIG_KERNEL_NETKIT=y
 CONFIG_BPF_EVENTS=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 
 # XDP工具链
 CONFIG_PACKAGE_bpftool-full=y
