--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -27,8 +27,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-22.04
-    resources:
-      memory: 16GB  # 增加16GB内存的配置
 
     steps:
     - name: Checkout
@@ -47,6 +45,17 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$GROUPS /workdir
+        
+    # ============= 添加16GB虚拟内存 =============
+    - name: Setup 16GB swap space
+      run: |
+        sudo dd if=/dev/zero of=/swapfile bs=1G count=16
+        sudo chmod 600 /swapfile
+        sudo mkswap /swapfile
+        sudo swapon /swapfile
+        echo "Swap space created:"
+        free -h
+    # ==========================================
 
     - name: Clone source code
       working-directory: /workdir
@@ -95,6 +104,16 @@ jobs:
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        
+    # ============= 清理虚拟内存 =============
+    - name: Cleanup swap space
+      if: always()
+      run: |
+        sudo swapoff /swapfile
+        sudo rm -f /swapfile
+        echo "Swap space removed:"
+        free -h
+    # =======================================
 
     - name: Check space usage
       if: (!cancelled())
