--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -11,7 +11,9 @@ CONFIG_USE_LLD=y
 CONFIG_LLVM_POLLY=y
 
 ### J4125专属调度优化 ###
-CONFIG_SCHED_BMQ=y
+CONFIG_SCHED_ALT=y
+CONFIG_SCHED_PDS=y           # 替代BMQ
+CONFIG_TICK_CPU_ACCOUNTING=n
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT_RT=y
 CONFIG_PREEMPT_VOLUNTARY=n
@@ -23,6 +25,7 @@ CONFIG_SCHED_CORE=y
 CONFIG_SCHED_MC=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_HRTICK=y
+CONFIG_IRQ_PIPELINE=y
 
 ### 内存优化 (8GB专用) ###
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=y
@@ -32,12 +35,13 @@ CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_COMPACTION=y
 CONFIG_ZSWAP=y
 CONFIG_ZSWAP_COMPRESSOR=lz4
-CONFIG_ZSWAP_ZPOOL=zsmalloc
+CONFIG_ZSWAP_ZPOOL=z3fold    # 比zsmalloc更高效
 CONFIG_PAGE_POISONING=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
+CONFIG_DAMON_RECLAIM=y       # 主动内存回收
 CONFIG_IDLE_PAGE_TRACKING=y
 
 ### 网络协议栈加速 ###
@@ -59,19 +63,24 @@ CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=192
 CONFIG_IP_MULTIPLE_TABLES=y
+CONFIG_NET_DEVLINK=y         # 新增设备链路支持
 
 ### i226网卡极致优化 ###
 CONFIG_IGC=y
 CONFIG_IGC_DCA=y
 CONFIG_IGC_HWMON=y
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
+CONFIG_IGC_DIM=y             # 动态中断调节
+CONFIG_IGC_VLAN_STRIPPING=y
+CONFIG_IGC_FPGA_LOAD=y
 CONFIG_IGC_LRO=y
 CONFIG_IGC_FPGA=y
 CONFIG_IGC_XDP=y
 CONFIG_IGC_TAPRIO=y
+CONFIG_XPS=y
+CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_PCI_MSI=y             # 必须启用MSI中断
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
@@ -91,10 +100,9 @@ CONFIG_KERNEL_DEBUG_INFO_BTF=y
 CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
 CONFIG_KERNEL_KALLSYMS=y
-CONFIG_KERNEL_KPROBES=y
-CONFIG_KERNEL_KPROBE_EVENTS=y
+CONFIG_KERNEL_KPROBES=y       # 减少开销
+CONFIG_KERNEL_KPROBE_EVENTS=y # 配套禁用
 CONFIG_NET_INGRESS=y
-CONFIG_NET_EGRESS=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
@@ -111,9 +119,7 @@ CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
 CONFIG_KERNEL_LWTUNNEL_BPF=y
-CONFIG_KERNEL_BPF_EVENTS=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_BPF_EVENTS=y
 CONFIG_DEBUG_KERNEL=y
 CONFIG_DEBUG_INFO=y
 CONFIG_DEBUG_INFO_REDUCED=n
@@ -124,20 +130,20 @@ CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_IRQ_PIPELINE=y
 CONFIG_HAVE_IRQ_PIPELINE=y
 CONFIG_IRQ_FASTEOI_HIER=y
 
 ### 电源与CPU调控 ###
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_X86_INTEL_PSTATE=y
+CONFIG_INTEL_PSTATE=y         
 CONFIG_ACPI_CPPC_CPUFREQ=y
 CONFIG_INTEL_IDLE=n
 CONFIG_INTEL_TCC=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
+
 
 ### 文件系统加速 ###
 CONFIG_SQUASHFS_XZ=y
