更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -3,12 +3,24 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 
-### 极致编译优化 ###
-CONFIG_CPU_MITIGATIONS=n
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
+### LLVM/Clang工具链极致优化 ###
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_LLVM_BOLT=y
+CONFIG_LLVM_POLLY=y
+CONFIG_LLVM_CFI=y
+CONFIG_LLVM_CFI_CLANG=y
+CONFIG_LLVM_CFI_PERF=y
+CONFIG_LLVM_LTO_NONE=n
+CONFIG_LLVM_LTO_CLANG_THIN=y
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;bolt;polly"
+CONFIG_LLVM_USE_LINKER=lld
+CONFIG_LLVM_PGO_GENERATE=y
+CONFIG_LLVM_PGO_USE=y
+CONFIG_ZLIB_OPTIMIZE_SPEED=y
+CONFIG_KERNEL_LTO=y        
 
 ### J4125专属调度优化 ###
 CONFIG_SCHED_PDS=y
@@ -25,7 +37,10 @@ CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y  # 新增中断栈优化
+CONFIG_SOFTIRQ_ON_OWN_STACK=y
+CONFIG_SCHED_CORE_LLC=y
+CONFIG_CPU_ISOLATION=y
+CONFIG_MIGRATION=y
 
 ### 内存优化 (8GB专用) ###
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
@@ -38,8 +53,14 @@ CONFIG_DAMON=y
 CONFIG_DAMON_VADDR=y
 CONFIG_DAMON_PADDR=y
 CONFIG_DAMON_RECLAIM=y
+CONFIG_PAGE_POOL=y
+CONFIG_PAGE_POOL_STATS=y
+CONFIG_SLUB=y
+CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_KFENCE=y
 
-### 网络协议栈加速 ###
+
+### 网络协议栈+NAT加速（已融合建议） ###
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
@@ -57,6 +78,15 @@ CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_PACKAGE_kmod-nft-socket=y
+CONFIG_PACKAGE_kmod-sched=y
+CONFIG_PACKAGE_kmod-bonding=y
+CONFIG_PACKAGE_kmod-nf-flow=y
+CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
+CONFIG_PACKAGE_kmod-nf-reject=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
@@ -65,7 +95,7 @@ CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=256  # 提升小包处理能力
+CONFIG_NET_RX_BUSY_POLL_BUDGET=256
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -75,7 +105,15 @@ CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_ACT_MIRRED=y
 CONFIG_NET_IP_TUNNEL=y
-CONFIG_NET_SCH_TAPRIO=y  # 新增时间感知调度
+CONFIG_NET_SCH_TAPRIO=y
+CONFIG_NET_SCH_MULTIQ=y
+CONFIG_NET_SCH_PIE=y
+CONFIG_NET_SCH_FQ_PIE=y
+CONFIG_NETFILTER_FLOW_OFFLOAD=y
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
+CONFIG_NETFILTER_XT_MATCH_BPF=y     
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y         
 
 ### i226网卡极致优化 ###
 CONFIG_IGC=y
@@ -89,13 +127,23 @@ CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_XPS_DEFAULT_QUEUES=4     # 建议提升为8
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y  # 新增轮询模式优化
+CONFIG_IRQ_POLL=y
+CONFIG_IGC_QUEUES=4
+CONFIG_IGC_RX_POLLING=y
+CONFIG_IGC_RX_NAPI=y
+CONFIG_IGC_TX_NAPI=y
+CONFIG_IGC_TSO=y
+CONFIG_IGC_GSO=y
+CONFIG_IGC_GRO=y
+CONFIG_IGC_RX_COPYBREAK=256
+CONFIG_IGC_RX_NAPI_WEIGHT=256
+
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
@@ -106,11 +154,13 @@ CONFIG_BPF=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
 CONFIG_BPF_JIT_ALWAYS_ON=y
+CONFIG_BPF_JIT_HARDEN=y
 CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_KERNEL=y  # XDP调试需要
-CONFIG_DEBUG_INFO=y  # BPF调试需要
+CONFIG_DEBUG_KERNEL=n
+CONFIG_DEBUG_INFO=n
 CONFIG_DEBUG_INFO_REDUCED=n
 CONFIG_DEBUG_INFO_BTF=y
+CONFIG_BPF_LSM=y
 CONFIG_KERNEL_BPF_EVENTS=y
 CONFIG_KERNEL_BPF_STREAM_PARSER=y
 CONFIG_KERNEL_CGROUPS=y
@@ -135,6 +185,9 @@ CONFIG_PACKAGE_clang=y
 CONFIG_PACKAGE_llvm=y
 CONFIG_KERNEL_LWTUNNEL_BPF=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+CONFIG_XDP_DEFAULT_HASH=y
+CONFIG_XDP_SOCKETS_UMEM_ALIGNMENT=2048
+CONFIG_BPF_PRELOAD=y
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -142,9 +195,10 @@ CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_PACKAGE_irqbalance=y
 CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
+CONFIG_HARDIRQS_SW_RESEND=y
+CONFIG_IRQ_DOMAIN_HIERARCHY=y
 
 ### 电源与CPU调控 ###
-# 恢复Intel P-State优化
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
@@ -154,6 +208,9 @@ CONFIG_INTEL_IDLE=n
 CONFIG_INTEL_TCC=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y  
+
 
 ### 文件系统加速 ###
 CONFIG_SQUASHFS_XZ=y
@@ -168,7 +225,12 @@ CONFIG_HARDENED_USERCOPY=y
 CONFIG_INIT_STACK_ALL_ZERO=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDOMIZE_KSTACK_OFFSET=y  # 新增栈随机化
+CONFIG_RANDOMIZE_KSTACK_OFFSET=y
+CONFIG_STATIC_USERMODEHELPER=y
+CONFIG_ZERO_CALL_USED_REGS=y
+CONFIG_SECURITY_SELINUX=y    
+CONFIG_SECURITY_APPARMOR=y   
+CONFIG_RETPOLINE=n
 
 ### 必备工具 ###
 CONFIG_PACKAGE_htop=y
@@ -189,7 +251,8 @@ CONFIG_PACKAGE_ip6tables=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y  # 新增IPv6优化
+CONFIG_IPV6_OPTIMISTIC_DAD=y
+CONFIG_IPV6_SUBTREES=y
 
 ### 固件设置 ###
 CONFIG_TARGET_KERNEL_PARTSIZE=32
