更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -5,6 +5,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 
 ### LLVM/Clang工具链极致优化 ###
 CONFIG_KERNEL_CLANG_LLVM=y
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
@@ -27,13 +28,14 @@ CONFIG_SCHED_PDS=y
 CONFIG_TICK_CPU_ACCOUNTING=n
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT=y
+CONFIG_PREEMPT_DYNAMIC=y
+CONFIG_PREEMPT_VOLUNTARY=n
 CONFIG_HZ=1000
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_SCHED_CORE=y
 CONFIG_SCHED_MC=y
-CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_SCHED_HRTICK=y
 CONFIG_RCU_BOOST=y
 CONFIG_RCU_NOCB_CPU=y
@@ -41,6 +43,7 @@ CONFIG_SOFTIRQ_ON_OWN_STACK=y
 CONFIG_SCHED_CORE_LLC=y
 CONFIG_CPU_ISOLATION=y
 CONFIG_MIGRATION=y
+CONFIG_INTEL_IDLE=n
 
 ### 内存优化 (8GB专用) ###
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
@@ -109,6 +112,7 @@ CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_PIE=y
 CONFIG_NET_SCH_FQ_PIE=y
+CONFIG_NET_SCH_CAKE=y
 CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y     
@@ -127,7 +131,7 @@ CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4     # 建议提升为8
+CONFIG_XPS_DEFAULT_QUEUES=4     
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
