更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -5,7 +5,7 @@ CONFIG_TARGET_x86_64_DEVICE_generic=y
 
 ### LLVM/Clang工具链极致优化 ###
 CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"  
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
@@ -63,7 +63,7 @@ CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_KFENCE=y
 
 
-### 网络协议栈+NAT加速（已融合建议） ###
+### 网络协议栈+NAT加速（极致优化版） ###
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
@@ -98,7 +98,7 @@ CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=256
+CONFIG_NET_RX_BUSY_POLL_BUDGET=512  
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -117,7 +117,10 @@ CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y     
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y         
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+CONFIG_NET_CLS_ACT=y  
+CONFIG_NET_CLS_FLOWER=y  
+CONFIG_NET_ACT_POLICE=y  
 
 ### i226网卡极致优化 ###
 CONFIG_IGC=y
@@ -131,23 +134,23 @@ CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4     
+CONFIG_XPS_DEFAULT_QUEUES=8  
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_POLL=y
-CONFIG_IGC_QUEUES=4
+CONFIG_IGC_QUEUES=8  
 CONFIG_IGC_RX_POLLING=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=256
-CONFIG_IGC_RX_NAPI_WEIGHT=256
-
+CONFIG_IGC_RX_COPYBREAK=512  
+CONFIG_IGC_RX_NAPI_WEIGHT=512  
+CONFIG_IGC_RSS=4  
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
@@ -175,7 +178,7 @@ CONFIG_NET_CLS_ACT=y
 CONFIG_NET_CLS_BPF=y
 CONFIG_NET_ACT_BPF=y
 CONFIG_NET_SCH_INGRESS=y
-CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
+CONFIG_KERNEL_MODALLOW_BTF_MISMATCH=y
 CONFIG_KERNEL_NETKIT=y
 CONFIG_PACKAGE_iproute2-tc=y
 CONFIG_PACKAGE_ethtool-full=y
@@ -191,6 +194,7 @@ CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
 CONFIG_XDP_DEFAULT_HASH=y
 CONFIG_XDP_SOCKETS_UMEM_ALIGNMENT=2048
 CONFIG_BPF_PRELOAD=y
+CONFIG_BPF_STREAM_PARSER=y  
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -214,13 +218,13 @@ CONFIG_ACPI_CPPC_LIB=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y  
 
-
 ### 文件系统加速 ###
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_BCACHEFS=y
 CONFIG_FS_VERITY=y
+
 
 ### 安全增强 ###
 CONFIG_STRICT_KERNEL_RWX=y
@@ -241,6 +245,7 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_xdp-tools=y
 CONFIG_PACKAGE_bpftool=y
+
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
