更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -13,13 +13,10 @@ CONFIG_LLVM_BOLT=y
 CONFIG_LLVM_POLLY=y
 CONFIG_LLVM_CFI=y
 CONFIG_LLVM_CFI_CLANG=y
-CONFIG_LLVM_CFI_PERF=y
-CONFIG_LLVM_LTO_NONE=n
 CONFIG_LLVM_LTO_CLANG_THIN=y
+# 移除PGO相关配置，避免编译复杂性
 CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;bolt;polly"
 CONFIG_LLVM_USE_LINKER=lld
-CONFIG_LLVM_PGO_GENERATE=y
-CONFIG_LLVM_PGO_USE=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_KERNEL_LTO=y        
 
@@ -61,33 +58,40 @@ CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_KFENCE=y
 
-### 网络协议栈+NAT加速（极致优化版） ###
+### 网络协议栈+NAT加速（极致优化版）###
+# 基础TCP优化
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
+
+# 关键调度模块
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
+CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-ifb=y
+CONFIG_PACKAGE_kmod-bonding=y
+
+# Netfilter加速
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-nft-compat=y
+CONFIG_PACKAGE_kmod-nft-nat=y
+CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-ipt-ipopt=y
 CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
 CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-sched=y
-CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
-CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
+
+# 加密加速
+CONFIG_PACKAGE_kmod-crypto-sha256=y
+
+# 内核级网络优化
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
@@ -110,6 +114,8 @@ CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_PIE=y
 CONFIG_NET_SCH_FQ_PIE=y
+
+# Netfilter硬件加速
 CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_BPF=y     
@@ -130,24 +136,28 @@ CONFIG_IGC_XDP=y
 CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
+
+# 网卡队列优化
 CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=8  
+CONFIG_XPS_DEFAULT_QUEUES=4  # J4125只有4核心，改为4队列
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
 CONFIG_IRQ_AFFINITY_HINT=y
 CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_POLL=y
-CONFIG_IGC_QUEUES=8  
+
+# i226驱动参数优化
+CONFIG_IGC_QUEUES=4  # 匹配CPU核心数
 CONFIG_IGC_RX_POLLING=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=512  
-CONFIG_IGC_RX_NAPI_WEIGHT=512  
-CONFIG_IGC_RSS=4  
+CONFIG_IGC_RX_COPYBREAK=1024  # 增加拷贝断点提高小包性能
+CONFIG_IGC_RX_NAPI_WEIGHT=256  # 适中权重平衡延迟和吞吐量
+CONFIG_IGC_RSS=4  # 匹配CPU核心数
 
 ### XDP核心配置 ###
 CONFIG_XDP_SOCKETS=y
@@ -264,3 +274,38 @@ CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
+
+### 新增优化项 ###
+# 内存分配器优化
+CONFIG_SLUB_DEBUG=n
+CONFIG_SLUB_DEBUG_ON=n
+CONFIG_SLUB_STATS=y
+
+# 网络栈内存优化
+CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POLL_BUDGET=64
+CONFIG_NET_NS=y
+CONFIG_NET_NS_DELAYED=y
+
+# 64字节小包优化
+CONFIG_NET_SKB_HEADROOM=128
+CONFIG_NET_SKB_ALLOC_SIZE=2048
+
+# 定时器优化
+CONFIG_NO_HZ=y
+CONFIG_NO_HZ_COMMON=y
+CONFIG_NO_HZ_FULL=y
+CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_HZ_PERIODIC=n
+CONFIG_HZ_1000=y
+
+# 缓存优化
+CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
+CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
+
+# 64字节小包转发专用优化
+CONFIG_NET_SKB_DATA_ALIGNMENT=64
+CONFIG_NET_SKB_PAD=64
+CONFIG_PAGE_SIZE_4KB=y
