更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -64,7 +64,13 @@ CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
-CONFIG_NF_NAT_FULLCONE=y
+
+# 全锥形NAT支持 - 关键配置
+CONFIG_NF_NAT_FULLCONE=y  # 确保启用内核级全锥形NAT支持
+CONFIG_NF_CONNTRACK=y     # 必须启用连接跟踪
+CONFIG_NF_CONNTRACK_EVENTS=y  # 连接跟踪事件支持
+CONFIG_NF_NAT=y           # 必须启用NAT
+CONFIG_NF_NAT_NEEDED=y    # 确保NAT功能完整
 
 # 关键调度模块
 CONFIG_PACKAGE_kmod-sched-core=y
@@ -89,7 +95,7 @@ CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y  # 确保nftables全锥形NAT模块被编译
 
 # 加密加速
 CONFIG_PACKAGE_kmod-crypto-sha256=y
@@ -312,3 +318,28 @@ CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_NET_SKB_DATA_ALIGNMENT=64
 CONFIG_NET_SKB_PAD=64
 CONFIG_PAGE_SIZE_4KB=y
+
+# 新增：确保连接跟踪模块支持
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_DEFRAG_IPV4=y
+CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+
+# 新增：确保Netfilter基础支持
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_NETFILTER_XT_TARGET_MARK=y
+
+# 新增：确保nftables基础支持
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_BRIDGE=y
