更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -5,14 +5,14 @@ CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
 ### LLVM/Clang工具链极致优化 ###
 CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"  
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_USE_LLD=y
 CONFIG_LTO_CLANG_THIN=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld" 
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 CONFIG_LLVM_USE_LINKER=lld
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_KERNEL_LTO=y        
+CONFIG_KERNEL_LTO=y
 
 ### J4125专属调度优化 ###
 CONFIG_SCHED_PDS=y
@@ -52,7 +52,7 @@ CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_KFENCE=y
 
-### 网络协议栈+NAT加速（极致优化版）###
+### 网络协议栈+NAT加速（nftables极致优化版）###
 # 基础TCP优化
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
@@ -60,11 +60,11 @@ CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
 
 # 全锥形NAT支持 - 关键配置
-CONFIG_NF_NAT_FULLCONE=y  # 确保启用内核级全锥形NAT支持
-CONFIG_NF_CONNTRACK=y     # 必须启用连接跟踪
-CONFIG_NF_CONNTRACK_EVENTS=y  # 连接跟踪事件支持
-CONFIG_NF_NAT=y           # 必须启用NAT
-CONFIG_NF_NAT_NEEDED=y    # 确保NAT功能完整
+CONFIG_NF_NAT_FULLCONE=y
+CONFIG_NF_CONNTRACK=y
+CONFIG_NF_CONNTRACK_EVENTS=y
+CONFIG_NF_NAT=y
+CONFIG_NF_NAT_NEEDED=y
 
 # 关键调度模块
 CONFIG_PACKAGE_kmod-sched-core=y
@@ -75,20 +75,19 @@ CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
 
-# Netfilter加速
+# nftables核心模块
+CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-nft-compat=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-nat-extra=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-nft-offload=y
+
+# Netfilter加速
 CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_PACKAGE_kmod-nft-fullcone=y  # 确保nftables全锥形NAT模块被编译
 
 # 加密加速
 CONFIG_PACKAGE_kmod-crypto-sha256=y
@@ -102,7 +101,7 @@ CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=512  
+CONFIG_NET_RX_BUSY_POLL_BUDGET=512
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
 CONFIG_NET_SCH_DEFAULT=y
@@ -121,8 +120,8 @@ CONFIG_NETFILTER_FLOW_OFFLOAD=y
 CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
 CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
 CONFIG_NETFILTER_XT_MATCH_STATE=y
-CONFIG_NET_CLS_ACT=y  
-CONFIG_NET_ACT_POLICE=y  
+CONFIG_NET_CLS_ACT=y
+CONFIG_NET_ACT_POLICE=y
 
 ### i226网卡极致优化 ###
 CONFIG_IGC=y
@@ -137,7 +136,7 @@ CONFIG_IGC_LATENCY_TOLERANCE=y
 
 # 网卡队列优化
 CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4  # J4125只有4核心，改为4队列
+CONFIG_XPS_DEFAULT_QUEUES=4
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_PCI_MSI=y
@@ -146,32 +145,16 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 CONFIG_IRQ_POLL=y
 
 # i226驱动参数优化
-CONFIG_IGC_QUEUES=4  # 匹配CPU核心数
+CONFIG_IGC_QUEUES=4
 CONFIG_IGC_RX_POLLING=y
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_TSO=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=1024  # 增加拷贝断点提高小包性能
-CONFIG_IGC_RX_NAPI_WEIGHT=256  # 适中权重平衡延迟和吞吐量
-CONFIG_IGC_RSS=4  # 匹配CPU核心数
-
-
-CONFIG_DEBUG_KERNEL=n
-CONFIG_DEBUG_INFO=n
-CONFIG_DEBUG_INFO_REDUCED=n
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_KALLSYMS=y
-CONFIG_KERNEL_KPROBES=y
-CONFIG_KERNEL_KPROBE_EVENTS=y
-CONFIG_NET_INGRESS=y
-CONFIG_NET_CLS_ACT=y
-CONFIG_NET_SCH_INGRESS=y CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y 
-CONFIG_KERNEL_NETKIT=y
-CONFIG_PACKAGE_iproute2-tc=y
-CONFIG_PACKAGE_ethtool-full=y
-CONFIG_PACKAGE_libtirpc=y
+CONFIG_IGC_RX_COPYBREAK=1024
+CONFIG_IGC_RX_NAPI_WEIGHT=256
+CONFIG_IGC_RSS=4
 
 ### 中断优化 ###
 CONFIG_IRQ_FORCED_THREADING=y
@@ -193,7 +176,7 @@ CONFIG_INTEL_TCC=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y  
+CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 
 ### 文件系统加速 ###
 CONFIG_SQUASHFS_XZ=y
@@ -211,14 +194,15 @@ CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
-CONFIG_SECURITY_SELINUX=y    
-CONFIG_SECURITY_APPARMOR=y   
+CONFIG_SECURITY_SELINUX=y
+CONFIG_SECURITY_APPARMOR=y
 CONFIG_RETPOLINE=n
 
 ### 必备工具 ###
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_nftables=y
 
 ### LuCI应用 ###
 CONFIG_PACKAGE_luci-app-arpbind=y
@@ -228,7 +212,6 @@ CONFIG_PACKAGE_luci-app-filemanager=y
 
 ### IPv6支持 ###
 CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_ip6tables=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
@@ -279,7 +262,9 @@ CONFIG_NET_SKB_DATA_ALIGNMENT=64
 CONFIG_NET_SKB_PAD=64
 CONFIG_PAGE_SIZE_4KB=y
 
-# 新增：确保连接跟踪模块支持
+# Netfilter基础支持
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK_IPV4=y
 CONFIG_NF_CONNTRACK_IPV6=y
 CONFIG_NF_DEFRAG_IPV4=y
@@ -289,17 +274,14 @@ CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
 
-# 新增：确保Netfilter基础支持
-CONFIG_NETFILTER=y
-CONFIG_NETFILTER_ADVANCED=y
-CONFIG_NETFILTER_XTABLES=y
-CONFIG_NETFILTER_XT_MARK=y
-CONFIG_NETFILTER_XT_TARGET_MARK=y
-
-# 新增：确保nftables基础支持
+# nftables基础支持
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
 CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NF_TABLES_BRIDGE=y
+
+### 新增nftables相关工具 ###
+CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_libnftnl=y
