更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -3,16 +3,67 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
-### LLVM/Clang工具链极致优化 ###
+### LLVM/Clang工具链极致优化 (增强版) ###
 CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_LLVM_TARGET_AARCH64=n
+CONFIG_LLVM_TARGET_ARM=n
+CONFIG_LLVM_TARGET_BPF=n
+CONFIG_LLVM_TARGET_MIPS=n
+CONFIG_LLVM_TARGET_POWERPC=n
+CONFIG_LLVM_TARGET_RISCV=n
+CONFIG_LLVM_TARGET_X86=y
+
+# 链接器优化
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld"
 CONFIG_LLVM_USE_LINKER=lld
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
+CONFIG_KERNEL_LD_ORPHAN_WARN=n                # 新增: 减少警告噪音
+
+# LTO 优化
+CONFIG_LTO_CLANG_THIN=y
+CONFIG_LTO_CLANG_FULL=n                       # 新增: ThinLTO 通常比 FullLTO 更好
 CONFIG_KERNEL_LTO=y
+CONFIG_KERNEL_LTO_CLANG_THIN=y                # 新增: 明确启用 ThinLTO
+CONFIG_KERNEL_LTO_CLANG_FULL=n
+
+# 编译优化级别
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
+CONFIG_KERNEL_OPTIMIZE_O3=y                   # 新增: 强制 O3 优化
+CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y      # 新增: 性能优化
+CONFIG_CC_OPTIMIZE_FOR_SIZE=n
+
+# 架构特定优化
+CONFIG_GCC_OPTIMIZE_CPU_NOCONA=n
+CONFIG_GCC_OPTIMIZE_CPU_CORE2=n
+CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y              # 新增: 为本机优化
+
+# 控制流完整性增强
+CONFIG_CFI_CLANG=y                            # 新增: 控制流完整性
+CONFIG_CFI_CLANG_SHADOW=y                     # 新增: 影子调用栈
+CONFIG_CFI_PERMISSIVE=n                       # 新增: 非宽容模式
+
+# 其他编译优化
+CONFIG_CC_DISABLE_WARN_MAYBE_UNINITIALIZED=n  # 新增: 保持警告
+CONFIG_ZLIB_OPTIMIZE_SPEED=y
+CONFIG_OPTIMIZE_INLINING=y                    # 新增: 内联优化
+CONFIG_KERNEL_BINUTILS_STRINGS=y              # 新增: 字符串工具
+
+# 减少调试信息体积
+CONFIG_DEBUG_INFO_NONE=n
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
+CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y           # 新增: 压缩调试信息
+CONFIG_DEBUG_INFO_REDUCED=n
+
+# 移除不需要的组件
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump" # 修改: 精简组件
+CONFIG_LLVM_POLLY_OPTIMIZER=n                 # 新增: 通常不需要
+CONFIG_CLANG_PYTHON_BINDINGS=n                # 新增: 移除Python绑定
+CONFIG_CLANG_TIDY=n                           # 新增: 移除静态分析
+
+# 内核模块压缩优化
+CONFIG_MODULE_COMPRESS_XZ=y                   # 新增: 更好的压缩比
+CONFIG_MODULE_COMPRESS_GZIP=n
+CONFIG_MODULE_COMPRESS_NONE=n
 
 ### J4125专属调度优化 ###
 CONFIG_SCHED_PDS=y
@@ -100,7 +151,7 @@ CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_NET_RX_BUSY_POLL=y
+CONFIG_NET_RX_BUSY_POOL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=512
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
