更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -5,7 +5,7 @@ CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
 ### LLVM/Clang工具链极致优化 (增强版) ###
 CONFIG_KERNEL_CLANG_LLVM=y
-CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
+CONFIG_LLVM_TARGET_ARCH="x86-64-v3"           # 修改: 升级到v3，J4125支持AVX2
 CONFIG_LLVM_TARGET_AARCH64=n
 CONFIG_LLVM_TARGET_ARM=n
 CONFIG_LLVM_TARGET_BPF=n
@@ -16,52 +16,51 @@ CONFIG_LLVM_TARGET_X86=y
 
 # 链接器优化
 CONFIG_USE_LLD=y
-CONFIG_LLVM_USE_LINKER=lld
-CONFIG_KERNEL_LD_ORPHAN_WARN=n                # 新增: 减少警告噪音
+CONFIG_KERNEL_LD_ORPHAN_WARN=n
 
 # LTO 优化
 CONFIG_LTO_CLANG_THIN=y
-CONFIG_LTO_CLANG_FULL=n                       # 新增: ThinLTO 通常比 FullLTO 更好
+CONFIG_LTO_CLANG_FULL=n
 CONFIG_KERNEL_LTO=y
-CONFIG_KERNEL_LTO_CLANG_THIN=y                # 新增: 明确启用 ThinLTO
+CONFIG_KERNEL_LTO_CLANG_THIN=y
 CONFIG_KERNEL_LTO_CLANG_FULL=n
 
 # 编译优化级别
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_KERNEL_OPTIMIZE_O3=y                   # 新增: 强制 O3 优化
-CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y      # 新增: 性能优化
+CONFIG_KERNEL_OPTIMIZE_O3=y
+CONFIG_KERNEL_OPTIMIZE_FOR_PERFORMANCE=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=n
 
 # 架构特定优化
 CONFIG_GCC_OPTIMIZE_CPU_NOCONA=n
 CONFIG_GCC_OPTIMIZE_CPU_CORE2=n
-CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y              # 新增: 为本机优化
+CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
 
 # 控制流完整性增强
-CONFIG_CFI_CLANG=y                            # 新增: 控制流完整性
-CONFIG_CFI_CLANG_SHADOW=y                     # 新增: 影子调用栈
-CONFIG_CFI_PERMISSIVE=n                       # 新增: 非宽容模式
+CONFIG_CFI_CLANG=y
+CONFIG_CFI_CLANG_SHADOW=y
+CONFIG_CFI_PERMISSIVE=n
 
 # 其他编译优化
-CONFIG_CC_DISABLE_WARN_MAYBE_UNINITIALIZED=n  # 新增: 保持警告
+CONFIG_CC_DISABLE_WARN_MAYBE_UNINITIALIZED=n
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_OPTIMIZE_INLINING=y                    # 新增: 内联优化
-CONFIG_KERNEL_BINUTILS_STRINGS=y              # 新增: 字符串工具
+CONFIG_OPTIMIZE_INLINING=y
+CONFIG_KERNEL_BINUTILS_STRINGS=y
 
 # 减少调试信息体积
 CONFIG_DEBUG_INFO_NONE=n
 CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
-CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y           # 新增: 压缩调试信息
+CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
 CONFIG_DEBUG_INFO_REDUCED=n
 
-# 移除不需要的组件
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump" # 修改: 精简组件
-CONFIG_LLVM_POLLY_OPTIMIZER=n                 # 新增: 通常不需要
-CONFIG_CLANG_PYTHON_BINDINGS=n                # 新增: 移除Python绑定
-CONFIG_CLANG_TIDY=n                           # 新增: 移除静态分析
+# LLVM组件精简
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm" # 修改: 添加必要工具
+CONFIG_LLVM_POLLY_OPTIMIZER=n
+CONFIG_CLANG_PYTHON_BINDINGS=n
+CONFIG_CLANG_TIDY=n
 
 # 内核模块压缩优化
-CONFIG_MODULE_COMPRESS_XZ=y                   # 新增: 更好的压缩比
+CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_MODULE_COMPRESS_GZIP=n
 CONFIG_MODULE_COMPRESS_NONE=n
 
@@ -90,7 +89,7 @@ CONFIG_INTEL_IDLE=n
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y
+CONFIG_LRU_GEN_WALKS_MMU=y                    # 新增: 提高页面回收效率
 CONFIG_COMPACTION=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_DAMON=y
@@ -110,7 +109,7 @@ CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
 
-# 全锥形NAT支持 - 关键配置
+# 全锥形NAT支持
 CONFIG_NF_NAT_FULLCONE=y
 CONFIG_NF_CONNTRACK=y
 CONFIG_NF_CONNTRACK_EVENTS=y
@@ -278,23 +277,23 @@ CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
 
-### 新增优化项 ###
-# 内存分配器优化
+### 内存分配器优化 ###
 CONFIG_SLUB_DEBUG=n
 CONFIG_SLUB_DEBUG_ON=n
 CONFIG_SLUB_STATS=y
 
-# 网络栈内存优化
+### 网络栈内存优化 ###
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=64
 CONFIG_NET_NS=y
 CONFIG_NET_NS_DELAYED=y
 
-# 64字节小包优化
+### 64字节小包优化 ###
 CONFIG_NET_SKB_HEADROOM=128
 CONFIG_NET_SKB_ALLOC_SIZE=2048
+CONFIG_NET_SKB_PAD=64                         # 新增: 优化小包性能
 
-# 定时器优化
+### 定时器优化 ###
 CONFIG_NO_HZ=y
 CONFIG_NO_HZ_COMMON=y
 CONFIG_NO_HZ_FULL=y
@@ -302,18 +301,17 @@ CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HZ_PERIODIC=n
 CONFIG_HZ_1000=y
 
-# 缓存优化
+### 缓存优化 ###
 CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 
-# 64字节小包转发专用优化
+### 64字节小包转发专用优化 ###
 CONFIG_NET_SKB_DATA_ALIGNMENT=64
-CONFIG_NET_SKB_PAD=64
 CONFIG_PAGE_SIZE_4KB=y
 
-# Netfilter基础支持
+### Netfilter基础支持 ###
 CONFIG_NETFILTER=y
 CONFIG_NETFILTER_ADVANCED=y
 CONFIG_NF_CONNTRACK_IPV4=y
@@ -325,7 +323,7 @@ CONFIG_NF_NAT_IPV6=y
 CONFIG_NF_NAT_MASQUERADE_IPV4=y
 CONFIG_NF_NAT_MASQUERADE_IPV6=y
 
-# nftables基础支持
+### nftables基础支持 ###
 CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_IPV4=y
@@ -336,3 +334,11 @@ CONFIG_NF_TABLES_BRIDGE=y
 ### 新增nftables相关工具 ###
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
+
+### 新增优化项 ###
+CONFIG_ARCH_WANT_GENERAL_HUGETLB=y            # 新增: 大页支持
+CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y       # 新增: 内存映射优化
+CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y   # 新增: 大页内存映射优化
+CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y        # 新增: 跳转标签优化
+CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y        # 新增: 栈帧优化
+CONFIG_HAVE_RUST=n                            # 新增: 禁用RUST支持，减少体积
